fix annoying overflow and margin issues

--- a/website/static/styles.css
+++ b/website/static/styles.css
@@ -32,7 +32,8 @@ body {
 .row {
     display: flex;
     gap: 0px; /* Space between boxes */
-    margin-bottom: 15px;
+    margin-bottom: 20px;
+    flex-wrap: wrap;
 }
 
 .box {
